# UnityLogViewer

./: .gitignore  README.md  README.zh-TW.md  cliff.toml  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  SettingsModal.tsx  Sidebar.tsx
src-tauri/: Cargo.toml  installed.marker  nsis-hooks.nsh  tauri.conf.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: banner.rs  lib.rs  parser.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  paths.rs  query.rs
src/lib/: api.ts  bookmarks.test.ts  bookmarks.ts  filter.test.ts  filter.ts  i18n.test.ts  i18n.ts  settings.test.ts  settings.ts  update.test.ts  update.ts
src/locales/: en.ts  es.ts  ja.ts  ko.ts  ru.ts  zh-CN.ts  zh-TW.ts
